--- a/clean.html
+++ b/clean.html
@@ -75,19 +75,19 @@
     <div class="chart-row">
         <div class="chart-container">
             <img src="static/leida_external_first_author_t1.png" alt="Compare with Semantic Scholar(T1)">
-            <div class="chart-caption">External First Author T1</div>
+            <div class="chart-caption">Compare with Semantic Scholar(T1)</div>
         </div>
         <div class="chart-container">
             <img src="static/leida_external_first_author_t3.png" alt="Compare with Semantic Scholar(T3)">
-            <div class="chart-caption">External First Author T3</div>
+            <div class="chart-caption">Compare with Semantic Scholar(T3)</div>
         </div>
         <div class="chart-container">
             <img src="static/leida_internal_first_author_t1.png" alt="Compare with Human-cited References(T1)">
-            <div class="chart-caption">Internal First Author T1</div>
+            <div class="chart-caption">Compare with Human-cited References(T1)</div>
         </div>
         <div class="chart-container">
             <img src="static/leida_internal_first_author_t3.png" alt="Compare with Human-cited References(T3)">
-            <div class="chart-caption">Internal First Author T3</div>
+            <div class="chart-caption">Compare with Human-cited References(T3)</div>
         </div>
     </div>
 
